Enhance pagination & update Swagger docs
